# kite-protocol

./: Cargo.toml  README.md
examples/: agent.rs  host.rs
src/: agent.rs  client.rs  controller.rs  error.rs  host.rs  lib.rs  main.rs  modules.rs  node.rs  protocol.rs  server.rs  services.rs
src/services/: discovery.rs  heartbeat.rs
