[package]
name = "kite-protocol"
version = "0.1.0"
authors = ["sunnysab <sunnysab@yeah.net>"]
edition = "2018"
crate-type = ["lib"]

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
byteorder = "1"
bytes = "0.5"
thiserror = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }