[package]
name = "kite-protocol"
version = "0.1.0"
authors = ["sunnysab <sunnysab@yeah.net>"]
edition = "2018"
repository = "https://github.com/sunnysab/kite-protocol"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
log = "0.4"
bytes = "0.5"
zstd = "0.5"
thiserror = "1"
chrono = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
simple_logger = "1.6"